--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,29 @@
 # $Id$
 
-2002-09-02  Ben Goodwin  <cinergi@users.sourceforge.net>
+0.3 - 0.4
 
-    * nss_config.c, lookup.c: Use uintptr_t instead of intptr_t
+    * No special configure/make arguments are necessary for Solaris.
+      You may, however, need to manually link the library.  If you
+      encounter an error with an undefined symbol, read the FAQ.
 
-    * nss_support.c: uintptr_t instead of intptr_t.  Also fixed
-      bus error (bad pointer usage) seen only under sun sparc.
+    * Fixed a couple of bus error conditions under Solaris/sparc. 
+
+    * Fixed memory leak under Solaris.
+
+    * Fixed core dump with Solaris csh and ~username expansion.
+      This fix probably fixed other core dumps as well.
+
+    * Fixed compile error under Solaris 2.6 (no socklen_t)
+
+    * Upgraded to autoconf 2.53
+
+    * Rewrote connection handlers.  CONFIG FILE CHANGES ARE REQUIRED. See
+      the file UPGRADING.
+
+    * Read [libnss_mysql] group in my.cnf
+
+    * Do some config validation before doing anything.  Helps prevent
+      mysterious core dumping.
 
 2002-08-28  Ben Goodwin  <cinergi@users.sourceforge.net>
 
