--- a/FAQ
+++ b/FAQ
@@ -39,12 +39,15 @@ Q: Why do I get the following message when compiling on Solaris?
     Undefined                       first referenced
      symbol                             in file
     __udivdi3                           /usr/local/lib/mysql/libmysqlclient.so
-A: You're using a newer (3.x) version of gcc which seems to create libraries
-   that need libgcc.  There are a couple solutions that I know of; BOTH
-   REQUIRE A COUPLE OF ADDITIONAL 'ld' PARAMETERS THAT ARE VERY IMPORTANT!
-   1) Link against gcc libs - add something like this to the final link line:
-      -l gcc -L/path/to/gcc/lib -z nodelete -Bgroup
-   2) Use GNU ld; use the same link line but make sure to add
-      -z nodelete -Bgroup
-      to your 'ld' command
-   I plan to automate a way around this.. But for now, this is necessary.
+A: There are a number of reasons for this, but basically you either need to:
+   a) change the linker you're using
+   b) add a library to the link line
+   - To change the linker, simply set the environment variable 'LD' to the
+     full path to the linker you want to use before running 'configure.
+     Usually you'll need to download and install the GNU 'ld' from the GNU
+     binutils package.
+   - To use the same linker but add the missing library, locate your libgcc.a
+     file from your GCC installation, and set the environment variable
+     'LDFLAGS' to the following before running 'configure':
+     -L/directory/containing/libgcc.a -lgcc
+
