--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,8 @@
               autoconf/automake/libtool/etc ... Install these utilities
               and use 'setup.sh' if you're building from CVS
 
+    * CHANGE: GNU 'make' is no longer required
+
     * BUGFIX: Re-implemented uid check to make sure getsp* routines
               couldn't be called by non-root users (which would create
               syslog message regarding failed query attempts).
@@ -25,6 +27,11 @@
 
     * BUGFIX: Check for comment lines before checking for bracketed sections -
               minor speed improvement
+
+    * BUGFIX: Reload config upon euid change - root privs are properly dropped
+
+    * BUGFIX: Don't *close* the sql connection upon fork - just invalidate
+              the child's version so it'll create a new connection.
 
 0.5 - 0.6
 
