--- a/ChangeLog
+++ b/ChangeLog
@@ -33,6 +33,8 @@
     * BUGFIX: Don't *close* the sql connection upon fork - just invalidate
               the child's version so it'll create a new connection.
 
+    * BUGFIX: Fixed deadlock issue for forking, multithreaded apps
+
 0.5 - 0.6
 
     * NEW:    Support for Sun Workshop compiler
