--- a/ChangeLog
+++ b/ChangeLog
@@ -6,7 +6,10 @@
               environment
 
     * BUGFIX: Try server #0 if all servers are marked down.  Was causing
-              bogus NSS_UNAVAIL returns if connection had been lost.
+              bogus NSS_UNAVAIL returns if connection had been lost
+
+    * CHANGE: Create debug file with a umask of '000' so any process
+              can write to it
 
 0.7 - 0.7a
 
