--- a/INSTALL
+++ b/INSTALL
@@ -1,7 +1,8 @@
 Basic Installation
 ==================
 
-   These are generic installation instructions.
+   These are generic installation instructions - PLEASE SEE THE FILE
+   `README' FOR SPECIFIC INFORMATION ABOUT INSTALLING THIS SOFTWARE.
 
    The `configure' shell script attempts to guess correct values for
 various system-dependent variables used during compilation.  It uses
