Changed my email address

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-libnss-mysql is Copyright (C) 2002 Ben Goodwin <ben@atomicmatrix.net>.
+libnss-mysql is Copyright (C) 2002 Ben Goodwin <cinergi@users.sourceforge.net>
 It was created in May 2002, based upon much earlier, non-NSS code.
 
 So far, no one else has contributed.
