Added website URL

--- a/INSTALL
+++ b/INSTALL
@@ -1,3 +1,5 @@
+Official website: http://libnss-mysql.sourceforge.net/
+
 Basic Installation
 ==================
 
@@ -181,3 +183,5 @@ operates.
      script, and exit.
 
 `configure' also accepts some other, not widely useful, options.
+
+$Id$
