--- a/ChangeLog
+++ b/ChangeLog
@@ -4,14 +4,36 @@
 
     * NEW:    Added RPM SPEC file to distribution
 
+    * NEW:    Lots of additional debugging in the mysql-specific code
+
     * BUGFIX: Disable MySQL automatic reconnect.  It's not safe in this
               environment
 
     * BUGFIX: Try server #0 if all servers are marked down.  Was causing
               bogus NSS_UNAVAIL returns if connection had been lost
 
+    * BUGFIX: Failover/retry wasn't quit right - could cause infinite
+              loops and other erroneous conditions.
+
+    * BUGFIX: Don't mess up syslog identification names with our own name.
+              As such, there's no more 'configure' option to specify the
+              syslog facility to use
+
+    * BUGFIX: Initialize all config options to non-null values to prevent
+              O/S-dependant NULL dereference crashes.
+
     * CHANGE: Create debug file with a umask of '000' so any process
               can write to it
+
+    * CHANGE: Removed [libnss_mysql] section for 'my.cnf' - use new options
+              directly in /etc/nss_mysql.cfg: ssl, timeout, compress,
+              initcmd.  These new options are specified within each server
+              section (primary, secondary, etc).  See sample configuration
+              file for details
+
+    * CHANGE: Updated sample database: uid=primary autoincremeting key,
+              gid=primary autoincrementing key, default values for password
+              and shell, and cosmetic changes.  Nothing major
 
     * CHANGE: Many updates to various documentation
 
