+ option to statically-compile libmysqlclient

--- a/TODO
+++ b/TODO
@@ -4,3 +4,4 @@ Support other NSS databases
 PAM library
 Solaris 9 PAM solution
 64-bit library support
+option to statically-compile libmysqlclient
