--- a/ChangeLog
+++ b/ChangeLog
@@ -9,9 +9,11 @@
               MySQL query string; fixes loops/errors with usernames that
               were extra-long
 
+    * BUGFIX: Fixed cosmetic error reporting queries missing from config
+
     * CHANGE: Only one server is supported.  The multi-server code was
               always buggy so I've decided to remove it, at least for 1.0.
-              It also part of the looping mentioned above
+              It was also part of the looping mentioned above
 
     * CHANGE: Renamed module from libnss_mysql to libnss-mysql for consistency.
               This includes renaming configuration files.  See UPGRADING for
